// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the total if 1 expense is passed 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    235
  </h3>
</div>
`;

exports[`should render the total if multiple expenses are passed 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    23512340987
  </h3>
</div>
`;
